blog and front page changes

--- a/src/content/projects/cybersoc.mdx
+++ b/src/content/projects/cybersoc.mdx
@@ -1,5 +1,5 @@
 ---
-title: CyberSoc
+title: z
 description: University of York Cyber Security Society website.
 image: ../../images/cybersoc-screenshot.png
 link: https://github.com/CyberSocYork/cybersocyork.github.io
