projects fixed, blog added

--- a/src/content/posts/2020-05-02-hello-world/index.mdx
+++ b/src/content/posts/2020-05-02-hello-world/index.mdx
@@ -1,46 +1,33 @@
 ---
-title: First Post!
-date: 2021-05-02
-description: My first post on this blog, powered by MDX!
-tags: [article]
+title: Touching Base
+date: 2021-07-24
+description: My very first article on this site. Stay tuned for more!
+tags: [hello world, my first post, motivation]
 published: true
 ---
 
-# h1 Heading
+# Hello!
 
-First MDX Post for Gatsby Blog! Hello World!
+As I continue to work on this website, I thought it would be a good idea to set up my first blog post.
 
-But if I add some text around it, which is likely [Google](https://google.com) to be how I used it. It'll probably look fine because the entire paragraph is under grid.
+## My Goals
 
-## h2 Heading
+I have a few goals in mind, such as diversifying my skills in terms of programming and Mathematics. For the past few years, my focus has always been on website development, and building applications.
+However, I have a new found passion in programming beyond just these and instead, I would like to focus on Cryptography and Machine Learning. 
 
-`this is a bunch of single-line code`
+## How Will I Achieve my Goals?
 
-### h3 Heading
+I document everything I do, and for one, these blog posts will help me stay on track to achieve my goals. I also schedule everything I do in a day to help me stay organized, and ensure to 
+dedicate at least an hour or two everyday towards x or y topic. I will also remember to start small and work my way up.
 
-```js:title=example-file.js
-async getGfycatInfo(gfyname) {
-  await this.checkToken();
+```python
+import numpy as np 
 
-  const res = await axios({
-    method: "GET",
-    url: `https://api.gfycat.com/v1/gfycats/${gfyname}`,
-    headers: {
-      Authorization: `Bearer ${this.token}`,
-    },
-  });
-
-  return res.data;
+def sigmoid(x):
+  return (1 / (1+ np.exp(-x))) #basic activation funct.
 ```
 
-![Close-up of a cat](./close-up-of-cat.jpg)
+<aside>It is even possible to implement neural networks just by using plain NumPy!</aside>
 
-Voluptate velit sint ullamco amet excepteur occaecat labore dolor ullamco excepteur enim adipisicing. Anim velit ad duis excepteur enim id fugiat incididunt aliqua ut laborum. Nostrud veniam cillum incididunt exercitation qui velit deserunt ex labore. Sint voluptate ipsum deserunt qui. Deserunt ut officia adipisicing incididunt proident laboris enim ipsum eiusmod culpa occaecat.
 
-Sunt duis ipsum anim nisi tempor. Cupidatat cillum eiusmod tempor cillum amet duis. Consectetur magna duis consequat irure aliquip occaecat laborum ad ullamco duis nisi proident. Laboris aute esse ut duis labore irure enim quis sint ipsum velit. Elit irure eu aliquip velit eiusmod dolor officia nisi officia deserunt.
 
-<aside>This text is inside an aside, because I want to see what it looks like!</aside>
-
-1. Element 1
-2. Element 2
-3. Element 3
