--- a/src/content/projects/safidev.mdx
+++ b/src/content/projects/safidev.mdx
@@ -1,7 +1,9 @@
 ---
 title: safi.dev
 description: This website. Optimized statically generated website that is fast & efficient.
+language: React SCSS Gatsby Node.JS
+github: https://github.com/shersafi/safi.dev
 image: ../../images/background-sher.dev.png
-link: https://github.com/benslv/countable
+link: https://www.safi.dev/
 tags: [JavaScript (ES6), Discord.js, Enmap]
 ---
